--- a/index.html
+++ b/index.html
@@ -5,23 +5,23 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
     <title>Calculadora</title>
-    <link rel="apple-touch-icon" sizes="180x180" href="./favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="./favicon/favicon-16x16.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="./favicon/android-chrome-192x192.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="./favicon/android-chrome-512x512.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="./favicon/favicon.ico">
-    <link rel="manifest" href="./favicon/site.webmanifest">
-    <link rel='stylesheet' href='../styles/App.css'>
-    <link rel='stylesheet' href='../styles/Tecla.css'>
-    <link rel='stylesheet' href='../styles/Pantalla.css'>
-    <link rel='stylesheet' href='../styles/Menu.css'>
-    <link rel='stylesheet' href='../styles/Audios.css'>
-    <script src='../scripts/index.js' type='text/javascript' defer></script>
-    <script src='../scripts/Calculadora.js' type='text/javascript'></script>
-    <script src='../scripts/Pantalla.js' type='text/javascript'></script>
-    <script src='../scripts/Menu.js' type='text/javascript'></script>
-    <script src='../scripts/Audios.js' type='text/javascript'></script>
+    <link rel="apple-touch-icon" sizes="180x180" href="./public/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./public/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./public/favicon/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./public/favicon/android-chrome-192x192.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./public/favicon/android-chrome-512x512.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./public/favicon/favicon.ico">
+    <link rel="manifest" href="./public/favicon/site.webmanifest">
+    <link rel='stylesheet' href='./styles/App.css'>
+    <link rel='stylesheet' href='./styles/Tecla.css'>
+    <link rel='stylesheet' href='./styles/Pantalla.css'>
+    <link rel='stylesheet' href='./styles/Menu.css'>
+    <link rel='stylesheet' href='./styles/Audios.css'>
+    <script src='./scripts/index.js' type='text/javascript' defer></script>
+    <script src='./scripts/Calculadora.js' type='text/javascript'></script>
+    <script src='./scripts/Pantalla.js' type='text/javascript'></script>
+    <script src='./scripts/Menu.js' type='text/javascript'></script>
+    <script src='./scripts/Audios.js' type='text/javascript'></script>
     <link rel='stylesheet' href='https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200' />
     <script type='module' src='https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js'></script>
     <script nomodule src='https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js'></script>
